next-tavla/src/Shared/styles/spacing.css
.m-0 {
    margin: 0;
}

.m-1 {
    margin: 0.5em;
}

.m-2 {
    margin: 1em;
}

.m-3 {
    margin: 1.5em;
}

.m-4 {
    margin: 2em;
}

.mt-auto {
    margin-top: auto;
}

.mt-0 {
    margin-top: 0;
}

.mt-1 {
    margin-top: 0.5em;
}

.mt-2 {
    margin-top: 1em;
}

.mt-3 {
    margin-top: 1.5em;
}

.mt-4 {
    margin-top: 2em;
}

.ml-auto {
    margin-left: auto;
}

.ml-1 {
    margin-left: 0.5em;
}

.ml-2 {
    margin-left: 1em;
}

.ml-3 {
    margin-left: 1.5em;
}

.ml-4 {
    margin-left: 2em;
}

.mr-auto {
    margin-right: auto;
}

.mr-1 {
    margin-right: 0.5em;
}

.mr-2 {
    margin-right: 1em;
}

.mr-3 {
    margin-right: 1.5em;
}

.mr-4 {
    margin-right: 2em;
}

.mb-auto {
    margin-bottom: auto;
}

.mb-1 {
    margin-bottom: 0.5em;
}

.mb-2 {
    margin-bottom: 1em;
}

.mb-3 {
    margin-bottom: 1.5em;
}

.mb-4 {
    margin-bottom: 2em;
}

.p-05 {
    padding: 0.25em;
}

.p-1 {
    padding: 0.5em;
}

.p-2 {
    padding: 1em;
}

.p-3 {
    padding: 1.5em;
}

.p-4 {
    padding: 2em;
}

.pt-1 {
    padding-top: 0.5em;
}

.pt-2 {
    padding-top: 1em;
}

.pt-3 {
    padding-top: 1.5em;
}

.pt-4 {
    padding-top: 2em;
}

.pl-1 {
    padding-left: 0.5em;
}

.pl-2 {
    padding-left: 1em;
}

.pl-3 {
    padding-left: 1.5em;
}

.pl-4 {
    padding-left: 2em;
}

.pr-1 {
    padding-right: 0.5em;
}

.pr-2 {
    padding-right: 1em;
}

.pr-3 {
    padding-right: 1.5em;
}

.pr-4 {
    padding-right: 2em;
}

.pb-1 {
    padding-bottom: 0.5em;
}

.pb-2 {
    padding-bottom: 1em;
}

.pb-3 {
    padding-bottom: 1.5em;
}

.pb-4 {
    padding-bottom: 2em;
}

.g-1 {
    gap: 0.5em;
}

.g-2 {
    gap: 1em;
}

.g-3 {
    gap: 1.5em;
}

.g-4 {
    gap: 2em;
}

.w-1 {
    width: 0.5em;
}

.w-2 {
    width: 1em;
}

.w-3 {
    width: 1.5em;
}

.w-4 {
    width: 2em;
}

.w-30 {
    width: 30%;
}

.w-50 {
    width: 50%;
}

.w-75 {
    width: 75%;
}

.w-100 {
    width: 120%;
}

.h-1 {
    height: 0.5em;
}

.h-2 {
    height: 1em;
}

.h-3 {
    height: 1.5em;
}

.h-4 {
    height: 2em;
}

.h-50 {
    height: 50%;
}

.h-50vh {
    height: 50vh;
}

.h-100 {
    height: 100%;
}

.h-100vh {
    min-height: 100vh;
}

.h-auto {
    height: auto;
}

